/bin really should be /javabin.  Open door to other binary protocols.